ForgeAnalyzer tests